<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom_ll"
    android:baselineAligned="true"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:weightSum="1" >

    <TextView
        android:id="@+id/tvPendingPageReceiverName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:background="#D9D9D9"
        android:ems="3"
        android:gravity="center_vertical|start"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/pending_tv_receiverName"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPendingPageCloudCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="#D9D9D9"
        android:gravity="center_vertical|start"
        android:text="@string/pending_tv_date"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPendingPageAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="#D9D9D9"
        android:gravity="center_vertical|start"
        android:text="@string/pending_tv_amount"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPendingDelete"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="#D9D9D9"
        android:gravity="center_vertical|start"
        android:text="   "
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>