<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/background_image"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlPaymentSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:alpha="0.7" >

        <TextView
            android:id="@+id/tvAccFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/accfound"
            android:textColor="#FFC107"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/tvAccFound"
            android:layout_marginTop="4dp"
            android:background="#455A64" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llAccDescDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlPaymentSummary"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:alpha="0.5"
        android:background="@color/White"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        
          <TextView
                android:id="@+id/tvAccDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/accfoundLongText"
                android:textColor="#455A64"
                android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_top_linear"
        android:baselineAligned="false"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@drawable/side_border_right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnlinkAcc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/side_border_right"
                android:text="@string/linkAcc"
                android:textColor="#455A64"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:background="@drawable/side_border_left"
            android:gravity="start"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnresetAcc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="#FFC107"
                android:text="@string/resetAcc"
                android:textColor="#455A64"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>